c4prj1_deck/grade.txt
Grading at Tue Jul 30 04:28:16 UTC 2019
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:205:2: error: variable-sized object may not be initialized
  unsigned match_counts[hand->n_cards] = { 1 };
  ^
eval.c:205:43: error: excess elements in array initializer [-Werror]
  unsigned match_counts[hand->n_cards] = { 1 };
                                           ^
eval.c:205:43: note: (near initialization for ‘match_counts’)
eval.c:210:11: error: request for member ‘cards’ in something not a structure or union
   if (hand.cards[i]->value == hand.cards[i + 1]->value) {
           ^
eval.c:210:35: error: request for member ‘cards’ in something not a structure or union
   if (hand.cards[i]->value == hand.cards[i + 1]->value) {
                                   ^
eval.c:220:9: error: function returns address of local variable [-Werror=return-local-addr]
  return match_counts;
         ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
